--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
     <div id="root">Hello World From HTML Tag</div>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="App.js"></script>
+    <script type="module" src="App.js"></script>
 </body>
 
 </html>
