--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn React</title>
+    <title>Food Delivery App</title>
     <link rel="stylesheet" href="App.css">
 </head>
 
 <body>
-    <div id="root">Hello World From HTML Tag</div>
+    <div id="root"></div>
 
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
